# selint

./: .gitignore  .lgtm.yml  CHANGELOG  Makefile.am  Makefile.in  NOTICE  README  README.md  autogen.sh  check_examples.txt  configure.ac  contributing.md  selint.conf  selint.spec
.github/workflows/: main.yml
man/: Makefile.am  selint.adoc  selint.h2m
src/: Makefile.am  check_hooks.c  check_hooks.h  color.c  color.h  example.te  fc_checks.c  fc_checks.h  file_list.c  file_list.h  if_checks.c  if_checks.h  infer.c  infer.h  lex.l  main.c  maps.c  maps.h  name_list.c  name_list.h  naming.c  naming.h  ordering.c  ordering.h  parse.y  parse_fc.c  parse_fc.h  parse_functions.c  parse_functions.h  perm_macro.c  perm_macro.h  runner.c  runner.h  selint.l  selint.y  selint_config.c  selint_config.h  selint_error.h  selint_lex.l  selint_main.c  (+13 more)
tests/: Makefile.am  check_check_hooks.c  check_fc_checks.c  check_file_list.c  check_functions.c  check_if_checks.c  check_infer.c  check_maps.c  check_name_list.c  check_ordering.c  check_parse_fc.c  check_parse_functions.c  check_parsing.c  check_perm_macro.c  check_runner.c  check_selint_config.c  check_startup.c  check_string_list.c  check_te_checks.c  check_template.c  check_tree.c  test_utils.c  test_utils.h
tests/functional/: end-to-end.bats
tests/functional/configs/: bad_ids.conf  broken.conf  default.conf  empty.conf  fc_macros.conf  order_lax.conf  order_ref.conf
tests/functional/policies/check_triggers/: access_vectors  c04.if  c05.if  c05.te  c06.2.te  c06.3.te  c06.pass.if  c06.te  c06.warn.if  c07.1.te  c07.if  c07.te  c08.fc  c08.if  c08.te  c08_other.te  e02.fc  e03e04e05.fc  e06.if  e06.te  e07.pass.te  e07.warn.te  e08.if  e08.pass.te  e08.te  e08.warn.te  e09.te  e10.pass.te  e10.te  e10.warn.te  modules.conf  obj_perm_sets.spt  s01.te  s02_other.te  s03.te  s04.if  s05.if  s05.te  s06.te  s07.fc  (+41 more)
tests/functional/policies/check_triggers/C-001/: decl_in_block.te  if_in_optional.te  interleaved.te  interleaved2.te  kernel_module_first.te  optional.te  optional_optional.te  role_ifs.te  self_macro.te  simple.te  types_in_requires.te
tests/functional/policies/check_triggers/C-001/interfaces/kernel/: domain.if  kernel.if
tests/functional/policies/check_triggers/C-001/interfaces/other/: bar.if  mta.if  role_ifs.if  xyz.if
tests/functional/policies/check_triggers/C-001/interfaces/system/: init.if  logging.if
tests/functional/policies/context/: context.if  context.te
tests/functional/policies/context2/: context2.if  context2.te
tests/functional/policies/misc/: disable.if  disable.te  disable_multiple.te  disable_multiple_other.te  disable_require_decl.if  disable_require_start.te  fc_macros.fc  needs_context.te  nesting.if  nesting.te  no_issues.te
tests/functional/policies/parse_errors/: test1.output  test1.te  test2.output  test2.te  test3.output  test4.output  test4.te  test5.output  test6.output  test7.if  test7.output  test8.output  test8.te  test9.output  test9.te
tests/functional/policies/refpolicy/contrib/: Changelog  abrt.fc  abrt.if  abrt.te  acct.te  afs.fc  afs.te  aiccu.te  aisexec.te  alsa.fc  alsa.if  alsa.te  amanda.te  amavis.fc  amavis.te  apache.fc  apache.if  apache.te  apcupsd.fc  apcupsd.te  apm.fc  apm.if  apm.te  apt.te  arpwatch.fc  arpwatch.if  arpwatch.te  asterisk.te  automount.fc  automount.if  automount.te  avahi.fc  avahi.te  bacula.fc  bacula.te  bcfg2.fc  bcfg2.te  bind.fc  bind.if  bind.te  (+413 more)
tests/functional/policies/refpolicy/kernel/: corenetwork.if  corenetwork.te
tests/functional/policies/report_format/: test1.output  test1.output.full  test1.output.summary  test1.output.summaryonly  test1.output.warn  test1.te
tests/sample_configs/: bad_format.conf  bad_format_2.conf  bad_order.conf  check_config.conf  invalid_option.conf  order_requires.conf  refpolicy_ordering.conf  severity_convention.conf  severity_error.conf  severity_fatal.conf  severity_invalid.conf  severity_style.conf  severity_warning.conf
tests/sample_policy_files/: access_vectors  bad_modules.conf  bad_obj_perm_sets.spt  bad_role_allow.te  basic.fc  basic.if  basic.te  blocks.te  bool_declarations.te  declaring_template.if  declaring_template.te  disable_booltunable.te  disable_comment.if  disable_comment.te  disable_require.if  extended_perms.te  ifdef.if  ifdef_block.te  infer_conflict.if  infer_loop.if  infer_simple.if  modules.conf  nested_templates.if  none_context.fc  obj_perm_sets.spt  perms.spt  syntax_error.te  uncommon.te  with_m4.fc
